--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,8 +36,9 @@ header {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: end;
+    justify-content: space-between;
     align-items: center;
+    height: 91px;
 }
 
 nav {
@@ -61,7 +62,7 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    min-height: 85vh;
+    min-height: 80vh;
 }
 
 .main div {
