--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,21 +1,41 @@
+header p {
+    font-family: 'Rock Salt';
+    font-size: 200%;
+    margin: 0;
+}
+
 .blog-header {
-    margin-left: 20px;
+    padding-left: 30px;
+    border-bottom: 3px double;
+    align-items: center;
+}
+
+.post-block {
+    min-height: 80vh;
 }
 
 .blog-post {
     border: 2px solid;
     border-radius: 10px;
-    margin: 5px 20px 15px 20px;
+    margin: 20px 20px 15px 20px;
     padding: 0px 20px;
 }
 
 .blog-post h1 {
+    font-family: 'Rock Salt';
     padding-left: 10px;
     font-size: 200%;
 }
 
 .no-posts {
-    width: 80vh;
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+}
+
+.no-posts-img {
+    height: 40vw;
 }
 
 .hz-line {
@@ -27,8 +47,10 @@
 #back-button {
     margin-right: 10px;
     width: 70px;
-    font-size: large;
-    background-color: var(--offWhite);
     border: 1px solid;
     border-radius: 5px;
+    background-color: var(--blue);
+    color: var(--darkPrimary);
+    font-weight: bold;
+    height: 30px;
 }
